hphp/test/zend/good/tests/classes/autoload/autoload_007.php
<?hh

<<__EntryPoint>> function autoload_007(): void {
$a = new stdClass;
var_dump($a is UndefC);
}
