hphp/test/zend/bad/zend/dynamic_call_002.php
<?php 

$a = new stdClass;

$a::$a();

?>